# agefreighter

./: README.md  noxfile.py  pyproject.toml  requirements.txt
Formula/: agefreighter.rb
data/airroute/: airport.csv  airroute_airport_airport.csv
data/countries/: city.csv  country.csv  has_country_city.csv
data/payment/: bitcoinaddress.csv  cookie.csv  cryptoaddress.csv  email.csv  partnerenduser.csv  performedby_creditcard_payment.csv  phone.csv  usedby_email_payment.csv  usedby_phone_payment.csv  usedin_cookie_payment.csv  usedin_creditcard_payment.csv  usedin_cryptoaddress_payment.csv
data/payment_small/: creditcard.csv  ip.csv  payment.csv  performedby_cookie_payment.csv  performedby_cryptoaddress_payment.csv  performedby_email_payment.csv  performedby_phone_payment.csv  usedby_cookie_payment.csv  usedby_creditcard_payment.csv  usedby_cryptoaddress_payment.csv  usedin_email_payment.csv  usedin_phone_payment.csv
data/persons/: knows_person_person.csv  likes_person_person.csv  person.csv
data/transaction/: customer_product_bought.avro  customer_product_bought.parquet  customer_product_bought.pickle
docker/: app.py  requirements.txt
docs/: Decision_tree-2025-01-27-023314.mmd  agefreighter.txt  avrofreighter.txt  azurestoragefreighter.txt  cosmosgremlinfreighter.txt  cosmosnosqlfreighter.txt  csvfreighter.txt  how_to_load_airroute.txt  multiazurestoragefreighter.txt  multicsvfreighter.txt  neo4jfreighter.txt  networkxfreighter.txt  notes.txt  parquetfreighter.txt  pgfreighter.txt  todos.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a8dbe74c53643308___init___py.html  z_a8dbe74c53643308_agefreighter_py.html  z_a8dbe74c53643308_converter_py.html  z_a8dbe74c53643308_cosmosgremlinloader_py.html  z_a8dbe74c53643308_cosmosnosqlexporter_py.html  z_a8dbe74c53643308_csvdatamanager_py.html  z_a8dbe74c53643308_csvexporter_py.html  z_a8dbe74c53643308_cypherparser_py.html  z_a8dbe74c53643308_g2c_py.html  z_a8dbe74c53643308_generator_py.html  z_a8dbe74c53643308_main_py.html  z_a8dbe74c53643308_neo4jexporter_py.html  z_a8dbe74c53643308_neo4jloader_py.html  z_a8dbe74c53643308_parsetab_py.html  z_a8dbe74c53643308_pgsqlexporter_py.html  z_a8dbe74c53643308_pgsqlloader_py.html  z_a8dbe74c53643308_view_py.html  z_fa9d450438c22a45___init___py.html  z_fa9d450438c22a45_agefreighter_py.html  z_fa9d450438c22a45_converter_py.html  z_fa9d450438c22a45_cosmosgremlinloader_py.html  z_fa9d450438c22a45_cosmosnosqlexporter_py.html  z_fa9d450438c22a45_csvdatamanager_py.html  z_fa9d450438c22a45_csvexporter_py.html  z_fa9d450438c22a45_cypherparser_py.html  z_fa9d450438c22a45_generator_py.html  z_fa9d450438c22a45_main_py.html  z_fa9d450438c22a45_neo4jexporter_py.html  z_fa9d450438c22a45_neo4jloader_py.html  z_fa9d450438c22a45_parsetab_py.html  z_fa9d450438c22a45_pgsqlexporter_py.html  z_fa9d450438c22a45_pgsqlloader_py.html  z_fa9d450438c22a45_view_py.html
images/: sample_graph.ai
src/agefreighter/: __init__.py  (+28 more)
tests/: actorfilms.parquet  agefreightertester.py  agefreighterutils.py  create_docs.py  drop_dup.py  dummy_generator.py  generate_docs.py  generate_dummy_data.py  generate_dummy_payment.py  generate_fake_data.py  neo2age.py  neo2mcsv.py  results-0.5.0.txt  results-0.5.2.txt  results-0.5.3.txt  results-0.6.0.txt  results.txt  test_agefreighter.py  test_converter.py  test_cosmosgremlinloader.py  test_cosmosnosqlexporter.py  test_csvdatamanager.py  test_csvexporter.py  test_csvfreighter.py  test_g2c.py  test_generator.py  test_main.py  test_multicsvfreighter.py  test_neo4jexporter.py  test_neo4jloader.py  test_pgsqlexporter.py  test_udf.sql  test_view.py
tools/: build_docker.py  noxfile.py
(+10 files in other folders)
