[project]
name = "agefreighter"
authors = [{ name = "Rio Fujita", email = "rifujita@microsoft.com" }]
version = "1.0.0a12"
license = { file = "LICENSE" }
description = "a Python package that helps you to create a graph database using Azure Database for PostgreSQL."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "argcomplete>=3.6.0",
    "numpy>=2.2.3",
    "psycopg[binary,pool]>=3.2.6",
    "shtab>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/rioriost/agefreighter"
Issues = "https://github.com/rioriost/agefreighter/issues"

[project.scripts]
agefreighter = "agefreighter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agefreighter/", "docs/"]

[tool.hatch.build.targets.sdist]
include = ["src/agefreighter/", "docs/"]
exclude = ["__pycache__", "*.rb", "uv.lock", "dist/.DS_Store"]

[dependency-groups]
dev = [
    "neo4j>=5.28.1",
    "openai>=1.66.3",
    "ply>=3.11",
]
